--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/poc
 spring.datasource.username=root
 spring.datasource.password=poc2022
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+
+## JWT ##
+fr.tse.poc.jwtSecretKey=poc2022SecretKey
+fr.tse.poc.jwtCookieName=poc
+fr.tse.poc.jwtExpirationMs=50000000
