--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 fr.tse.poc.jwtSecretKey=poc2022SecretKey
 fr.tse.poc.jwtCookieName=poc
 fr.tse.poc.jwtExpirationMs=50000000
+
+## Freemarker ##
+spring.freemarker.template-loader-path= classpath:/templates/
+spring.freemarker.suffix= .ftl
