--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,17 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.11.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.29</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.xhtmlrenderer</groupId>-->
+<!--			<artifactId>flying-saucer-core</artifactId>-->
+<!--			<version>9.1.23</version>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
