--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ fr.tse.poc.jwtCookieName=poc
 fr.tse.poc.jwtExpirationMs=50000000
 
 ## Freemarker ##
-spring.freemarker.template-loader-path= classpath:/templates/
-spring.freemarker.suffix= .ftl
+spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.suffix=.ftl
