--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ fr.tse.poc.jwtExpirationMs=50000000
 ## Freemarker ##
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
+
+#springdoc.api-docs.path=/api-docs
+#springdoc.swagger-ui.path=/swagger-api
+#springdoc.swagger-ui.operationsSorter=method
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
